# altohuman-server

./: .env  .env.sample  README.md  main.py  pyproject.toml
core/: config.py  db.py  rate_limit.py
dependencies/: user.py
error/: __init__.py
middleware/: __init__.py
migrations/: env.py
migrations/versions/: 4a211986ff27_payment_plan.py  69fadaf3745f_neon_db.py  cf8e467adc36_table_column_fix.py  f223e4f6f0b1_fix.py
models/: __init__.py  account_model.py  payment_model.py  session_model.py  user_model.py  verification_model.py
routes/: humanizer_route.py  payment_route.py  user_route.py
schema/: humanize_schema.py  user_schema.py
