[project]
name = "altohuman-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-limiter>=0.1.6",
    "fastapi[standard]>=0.136.1",
    "langchain-core>=1.3.3",
    "langchain-groq>=1.1.2",
    "pyrate-limiter>=4.1.0",
    "python-dotenv>=1.2.2",
    "redis>=7.1.0",
    "sqlmodel>=0.0.38",
]
